<resources>

    <string name="app_name">RacingBoxes</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="racebox1">1</string>
    <string name="racebox2">2</string>
    <string name="racebox3">3</string>
    <string name="racebox4">4</string>
    <string name="racebox5">5</string>

</resources>